@@ -1106,3 +1106,4 @@ The following functions accept any form a path. The INI and language INI functio
 2019-10-04  Fixed: OSDMenuPutS() made private again (due to the use of FONTYOFFSET)
             Added: OSDMenuPutString() (user-usable replacement for OSDMenuPutS())
             Modified: OSDMenuGetH() renamed OSDMenuGetStringHeight()
+            Modified: Rename OSDMenuGetW() OSDMenuGetStringWidth() and define OSDMenuGetW as an alias
